--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "connect-assets-hbs-helpers",
-  "version": "0.0.1",
-  "description": "Handlebars helpers for connect-assets",
-  "main": "index.coffee",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "William Coates",
-  "license": "MIT",
-  "dependencies": {
-     "express-hbs": "~0.1.3-pre"
-   }
+    "name": "connect-assets-hbs-helpers",
+    "version": "0.0.6",
+    "description": "Handlebars helpers for connect-assets",
+    "main": "index.coffee",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "William Coates",
+    "license": "MIT",
+    "dependencies": {
+        "express-hbs": ">= 0.2.0"
+    },
+    "repository" :{
+        "type" : "git",
+        "url" : "https://github.com/williamcoates/connect-assets-hbs-helpers"
+    }
 }
